--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -61,6 +61,9 @@
 <div class="login-container">
     <h2>로그인</h2>
     <form action="/login" method="post">
+        <!-- csrf token -->
+        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
+
         <div class="input-group">
             <label for="username">사용자 이름</label>
             <input type="text" id="username" name="username" required>
