--- a/src/main/resources/templates/user/regist.html
+++ b/src/main/resources/templates/user/regist.html
@@ -66,6 +66,9 @@
 <div class="signup-container">
     <h2>회원가입</h2>
     <form action="/regist-action" method="POST">
+        <!-- csrf token -->
+        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
+
         <div class="form-group">
             <label for="userId">아이디 *</label>
             <input type="text" id="userId" name="userId">
